[package]
name = "hyper-sync-rustls"
version = "0.3.0-rc.3"
authors = ["Sergio Benitez <sb@sergio.bz>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Glue code for Rustls and synchronous Hyper."
homepage = "https://github.com/SergioBenitez/hyper-sync-rustls"
repository = "https://github.com/SergioBenitez/hyper-sync-rustls"

[features]
default = ["client", "server"]
client = ["webpki-roots", "webpki"]
server = []

[dependencies]
webpki-roots = { version = "0.15", optional = true }
webpki = { version = "0.18", optional = true }
rustls = "0.13"

[dependencies.hyper]
version = "0.10"
default-features = false

[dev-dependencies]
env_logger = "0.5"
